body terminer page-netflix

--- a/page-netflix-css.css
+++ b/page-netflix-css.css
@@ -99,3 +99,18 @@ body {
     flex: -1vw;
     width: 200px;
 }
+
+p {
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+      margin-left: 100%;
+    }
+  
+    to {
+      margin-left: 0%;
+    }
+  }
