--- a/page-nourriture.css
+++ b/page-nourriture.css
@@ -1,23 +1,40 @@
-.article-left {
-    float: left;
-}
-
-.article-right {
-    float: right;
-}
-
 img {
-    max-width:400px;
-    height:400px;
-
+    max-width:40%;
+    height:auto;
+    border-radius: 70%;
 }
 
-.text-left {
-    float: right;
-    margin-left: 20px;
-    margin-top: 0px;
-
+div {
+    background: black;
+    height:auto;
 }
-.text-right {
+
+h2 {
+    color: whitesmoke;
+    font-family: Verdana;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
     float: left;
+    width: 50%;
+    padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
 }
